deployments/modules/python-visitors/services/frontend/overlays/localkube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: python-visitors-localkube
spec:
  hosts:
    - ""
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend
            port:
              number: 8080
